--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -24,6 +24,7 @@
     "@mdx-js/react": "^1.5.0",
     "@reach/router": "^1.2.1",
     "@theme-ui/preset-base": "^0.2.40",
+    "@theme-ui/prism": "^0.2.40",
     "@types/lodash": "^4.14.138",
     "debug": "^4.1.1",
     "gatsby": "^2.15.29",
