--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -1,14 +1,8 @@
 {
   "name": "gatsby-theme-chronoblog",
-  "version": "0.0.12",
+  "version": "0.0.11",
   "description": "gatsby-theme-chronoblog",
-  "keywords": [
-    "blog",
-    "gatsby",
-    "gatsby-plugin",
-    "gatsby-theme",
-    "react"
-  ],
+  "keywords": ["blog", "gatsby", "gatsby-plugin", "gatsby-theme", "react"],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
     "type": "git",
@@ -33,7 +27,7 @@
     "@theme-ui/prism": "^0.2.40",
     "@types/lodash": "^4.14.138",
     "debug": "^4.1.1",
-    "gatsby": "^2.15.29",
+    "gatsby": "^2.16.5",
     "gatsby-background-image": "^0.8.11",
     "gatsby-image": "^2.2.19",
     "gatsby-plugin-emotion": "^4.1.9",
@@ -58,12 +52,12 @@
     "url-join": "^4.0.1"
   },
   "devDependencies": {
-    "gatsby": "^2.15.29",
+    "gatsby": "^2.16.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   },
   "peerDependencies": {
-    "gatsby": "^2.15.29",
+    "gatsby": "^2.16.5",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   },
