--- a/package.json
+++ b/package.json
@@ -30,16 +30,16 @@
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-helmet": "^5.0.10",
-    "@typescript-eslint/eslint-plugin": "^2.4.0",
-    "@typescript-eslint/parser": "^2.4.0",
+    "@typescript-eslint/eslint-plugin": "^2.6.1",
+    "@typescript-eslint/parser": "^2.6.1",
     "babel-jest": "^24.9.0",
     "babel-preset-gatsby": "^0.2.13",
-    "eslint": "^6.5.1",
+    "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.3.0",
     "eslint-plugin-html": "^6.0.0",
     "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsdoc": "^15.9.2",
+    "eslint-plugin-jsdoc": "^17.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
@@ -47,17 +47,18 @@
     "eslint-plugin-simple-import-sort": "^4.0.0",
     "eslint-plugin-sonarjs": "^0.4.0",
     "eslint-plugin-unicorn": "^12.1.0",
-    "husky": "^3.0.5",
+    "husky": "^3.0.9",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
     "lerna": "^3.16.4",
-    "lint-staged": "^9.2.5",
+    "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
     "react-test-renderer": "^16.9.0",
-    "typescript": "^3.6.3",
-    "yarn": "^1.19.0"
+    "typescript": "^3.7.2",
+    "yarn": "^1.19.1"
   },
   "engines": {
+    "npm": "! use yarn !",
     "node": ">=10.15.0",
     "yarn": ">=1.5.1"
   }
