--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "private": true,
   "license": "MIT",
   "author": "Ivan Ganev <ganevio92@gmail.com>",
-  "workspaces": [
-    "packages/*",
-    "starters/*"
-  ],
+  "workspaces": ["packages/*", "starters/*"],
   "scripts": {
     "build:chronoblog": "yarn clean && yarn workspace chronoblog build",
     "build:chronoblog-netlify-cms": "yarn clean && yarn workspace chronoblog-netlify-cms build",
@@ -33,7 +30,7 @@
     "@typescript-eslint/eslint-plugin": "^2.6.1",
     "@typescript-eslint/parser": "^2.6.1",
     "babel-jest": "^24.9.0",
-    "babel-preset-gatsby": "^0.2.13",
+    "babel-preset-gatsby": "^0.2.20",
     "eslint": "^6.6.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.3.0",
@@ -42,18 +39,18 @@
     "eslint-plugin-jsdoc": "^17.1.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.14.3",
-    "eslint-plugin-react-hooks": "^2.1.2",
+    "eslint-plugin-react": "^7.16.0",
+    "eslint-plugin-react-hooks": "^2.2.0",
     "eslint-plugin-simple-import-sort": "^4.0.0",
     "eslint-plugin-sonarjs": "^0.4.0",
     "eslint-plugin-unicorn": "^12.1.0",
     "husky": "^3.0.9",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^24.9.0",
-    "lerna": "^3.16.4",
+    "lerna": "^3.18.3",
     "lint-staged": "^9.4.2",
     "prettier": "^1.18.2",
-    "react-test-renderer": "^16.9.0",
+    "react-test-renderer": "^16.11.0",
     "typescript": "^3.7.2",
     "yarn": "^1.19.1"
   },
