--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,11 +16,7 @@
     "types": ["@emotion/core", "jest"]
     // "noImplicitAny": true
   },
-  "include": [
-    "./packages/**/src/**/*",
-    "./examples/**/src/**/*",
-    "packages/gatsby-theme-chronoblog/pages"
-  ],
+  "include": ["./packages/**/src/**/*", "./starters/**/src/**/*"],
   "exclude": [
     "node_modules",
     "node_modules/**/*",
