chore(release): Publish
 - gatsby-theme-chronoblog-core@0.1.1
 - gatsby-theme-chronoblog@0.1.1
 - chronoblog-netlify-cms@1.0.4
 - chronoblog@1.0.7
 - minimal-core@1.0.1
 - minimal@1.0.7

--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -1,8 +1,14 @@
 {
   "name": "gatsby-theme-chronoblog",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "gatsby-theme-chronoblog",
-  "keywords": ["blog", "gatsby", "gatsby-plugin", "gatsby-theme", "react"],
+  "keywords": [
+    "blog",
+    "gatsby",
+    "gatsby-plugin",
+    "gatsby-theme",
+    "react"
+  ],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
     "type": "git",
@@ -18,7 +24,7 @@
     "start": "gatsby develop"
   },
   "dependencies": {
-    "gatsby-theme-chronoblog-core": "^0.1.0"
+    "gatsby-theme-chronoblog-core": "^0.1.1"
   },
   "devDependencies": {
     "gatsby": "^2.16.5",
