--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -5,14 +5,14 @@ on:
       - master
 jobs:
   tests:
-    timeout-minutes: 30
+    timeout-minutes: 60
     name: Test Starter ${{ matrix.starter }} on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         node_version: [10, 12]
         os: [ubuntu-latest, macos-latest, windows-latest]
-        starter: [chronoblog, chronoblog-netlify-cms, minimal]
+        starter: [chronoblog, chronoblog-netlify-cms, minimal, minimal-core]
     steps:
       - uses: actions/checkout@v1
 
