--- a/packages/gatsby-theme-chronoblog-core/package.json
+++ b/packages/gatsby-theme-chronoblog-core/package.json
@@ -2,13 +2,7 @@
   "name": "gatsby-theme-chronoblog-core",
   "version": "0.1.1",
   "description": "gatsby-theme-chronoblog-core",
-  "keywords": [
-    "blog",
-    "gatsby",
-    "gatsby-plugin",
-    "gatsby-theme",
-    "react"
-  ],
+  "keywords": ["blog", "gatsby", "gatsby-plugin", "gatsby-theme", "react"],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
     "type": "git",
@@ -29,8 +23,6 @@
     "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
     "@reach/router": "^1.2.1",
-    "@theme-ui/preset-base": "^0.2.44",
-    "@theme-ui/prism": "^0.2.40",
     "debug": "^4.1.1",
     "gatsby": "^2.16.5",
     "gatsby-background-image": "^0.8.15",
