chore(release): Publish
 - gatsby-theme-chronoblog-core@0.1.2
 - gatsby-theme-chronoblog@0.1.2
 - chronoblog-netlify-cms@1.0.5
 - chronoblog@1.0.8
 - minimal-core@1.0.2
 - minimal@1.0.8

--- a/packages/gatsby-theme-chronoblog-core/package.json
+++ b/packages/gatsby-theme-chronoblog-core/package.json
@@ -1,8 +1,14 @@
 {
   "name": "gatsby-theme-chronoblog-core",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "gatsby-theme-chronoblog-core",
-  "keywords": ["blog", "gatsby", "gatsby-plugin", "gatsby-theme", "react"],
+  "keywords": [
+    "blog",
+    "gatsby",
+    "gatsby-plugin",
+    "gatsby-theme",
+    "react"
+  ],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
     "type": "git",
