--- a/packages/gatsby-theme-chronoblog-core/package.json
+++ b/packages/gatsby-theme-chronoblog-core/package.json
@@ -2,13 +2,7 @@
   "name": "gatsby-theme-chronoblog-core",
   "version": "0.1.2",
   "description": "gatsby-theme-chronoblog-core",
-  "keywords": [
-    "blog",
-    "gatsby",
-    "gatsby-plugin",
-    "gatsby-theme",
-    "react"
-  ],
+  "keywords": ["blog", "gatsby", "gatsby-plugin", "gatsby-theme", "react"],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
     "type": "git",
