--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -1,8 +1,14 @@
 {
   "name": "gatsby-theme-chronoblog",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "gatsby-theme-chronoblog",
-  "keywords": ["blog", "gatsby", "gatsby-plugin", "gatsby-theme", "react"],
+  "keywords": [
+    "blog",
+    "gatsby",
+    "gatsby-plugin",
+    "gatsby-theme",
+    "react"
+  ],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
     "type": "git",
@@ -18,12 +24,12 @@
     "start": "gatsby develop"
   },
   "dependencies": {
-    "react-headroom": "^3.0.0",
-    "theme-ui": "^0.2.44",
     "@mdx-js/react": "^1.5.1",
     "@theme-ui/preset-base": "^0.2.44",
     "@theme-ui/prism": "^0.2.40",
-    "gatsby-theme-chronoblog-core": "^0.1.2"
+    "gatsby-theme-chronoblog-core": "^0.1.3",
+    "react-headroom": "^3.0.0",
+    "theme-ui": "^0.2.44"
   },
   "devDependencies": {
     "gatsby": "^2.16.5",
