--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -2,13 +2,7 @@
   "name": "gatsby-theme-chronoblog",
   "version": "0.1.4",
   "description": "gatsby-theme-chronoblog",
-  "keywords": [
-    "blog",
-    "gatsby",
-    "gatsby-plugin",
-    "gatsby-theme",
-    "react"
-  ],
+  "keywords": ["blog", "gatsby", "gatsby-plugin", "gatsby-theme", "react"],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
     "type": "git",
@@ -24,12 +18,38 @@
     "start": "gatsby develop"
   },
   "dependencies": {
+    "@babel/core": "^7.6.4",
+    "@emotion/core": "^10.0.22",
+    "@mdx-js/mdx": "^1.5.1",
     "@mdx-js/react": "^1.5.1",
+    "@reach/router": "^1.2.1",
     "@theme-ui/preset-base": "^0.2.44",
     "@theme-ui/prism": "^0.2.40",
-    "gatsby-theme-chronoblog-core": "^0.1.4",
+    "debug": "^4.1.1",
+    "gatsby": "^2.16.5",
+    "gatsby-background-image": "^0.8.15",
+    "gatsby-image": "^2.2.29",
+    "gatsby-plugin-emotion": "^4.1.13",
+    "gatsby-plugin-mdx": "^1.0.55",
+    "gatsby-plugin-meta-redirect": "^1.1.1",
+    "gatsby-plugin-page-creator": "^2.1.27",
+    "gatsby-plugin-react-helmet": "^3.1.13",
+    "gatsby-plugin-sharp": "^2.2.32",
+    "gatsby-plugin-theme-ui": "^0.2.43",
+    "gatsby-redirect-from": "^0.2.1",
+    "gatsby-remark-images": "^3.1.28",
+    "gatsby-remark-responsive-iframe": "^2.2.25",
+    "gatsby-source-filesystem": "^2.1.35",
+    "gatsby-transformer-sharp": "^2.3.2",
+    "lodash": "^4.17.15",
+    "normalize-url": "^4.5.0",
     "react-headroom": "^3.0.0",
-    "theme-ui": "^0.2.44"
+    "react-helmet": "^5.2.1",
+    "react-hover-observer": "^2.1.1",
+    "remark-slug": "^5.1.2",
+    "remark-unwrap-images": "^0.2.0",
+    "theme-ui": "^0.2.44",
+    "url-join": "^4.0.1"
   },
   "devDependencies": {
     "gatsby": "^2.16.5",
