--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -12,7 +12,7 @@ jobs:
       matrix:
         node_version: [10, 12]
         os: [ubuntu-latest, macos-latest, windows-latest]
-        starter: [chronoblog, chronoblog-netlify-cms, minimal, minimal-core]
+        starter: [chronoblog, chronoblog-netlify-cms, minimal]
     steps:
       - uses: actions/checkout@v1
 
@@ -29,7 +29,7 @@ jobs:
           npm run build
 
   publish:
-    timeout-minutes: 30
+    timeout-minutes: 60
     needs: [tests]
     runs-on: ubuntu-latest
     steps:
