--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -8,6 +8,7 @@
     "gatsby-plugin",
     "gatsby-theme",
     "react",
+    "timeline",
     "chronoblog"
   ],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
