--- a/starters/chronoblog-netlify-cms/package.json
+++ b/starters/chronoblog-netlify-cms/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-netlify": "^2.1.17",
     "gatsby-plugin-netlify-cms": "^4.1.22",
     "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-plugin-sitemap": "^2.2.21",
     "gatsby-theme-chronoblog": "^0.2.11",
     "netlify-cms-app": "^2.9.7",
     "react": "^16.12.0",
