--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -1,7 +1,7 @@
 {
   "name": "gatsby-theme-chronoblog",
   "version": "0.2.13",
-  "description": "gatsby-theme-chronoblog",
+  "description": "Chronoblog is a Gatsby js theme specifically designed to create a personal website.  The main idea of ​​Chronoblog is to allow you not only to write a personal blog but also to keep a record of everything important that you have done.",
   "keywords": [
     "blog",
     "gatsby",
