--- a/packages/gatsby-theme-chronoblog/src/.prettierrc
+++ b/packages/gatsby-theme-chronoblog/src/.prettierrc
@@ -2,5 +2,6 @@
   "singleQuote": true,
   "arrowParens": "always",
   "tabWidth": 2,
-  "useTabs": false
+  "useTabs": false,
+  "proseWrap": "preserve"
 }
