image backdrop for Firefox

--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -4,17 +4,17 @@
   "description": "Chronoblog is a Gatsby js theme specifically designed to create a personal website.  The main idea of ​​Chronoblog is to allow you not only to write a personal blog but also to keep a record of everything important that you have done.",
   "keywords": [
     "blog",
+    "chronoblog",
+    "feed",
     "gatsby",
-    "gatsbyjs",
     "gatsby-plugin",
-    "gatsby-theme",
     "gatsby-starter",
+    "gatsby-theme",
+    "gatsbyjs",
+    "mdx",
     "react",
     "theme-ui",
-    "mdx",
-    "feed",
-    "timeline",
-    "chronoblog"
+    "timeline"
   ],
   "homepage": "https://github.com/Ganevru/gatsby-theme-chronoblog",
   "repository": {
@@ -46,20 +46,20 @@
     "@theme-ui/prism": "^0.2.40",
     "debug": "^4.1.1",
     "gatsby": "^2.17.15",
-    "gatsby-background-image": "^0.8.15",
     "gatsby-image": "^2.2.29",
     "gatsby-plugin-emotion": "^4.1.13",
     "gatsby-plugin-mdx": "^1.0.55",
     "gatsby-plugin-page-creator": "^2.1.27",
     "gatsby-plugin-react-helmet": "^3.1.13",
-    "gatsby-plugin-sharp": "^2.2.32",
+    "gatsby-plugin-sharp": "^2.3.4",
     "gatsby-plugin-theme-ui": "^0.2.43",
     "gatsby-remark-images": "^3.1.28",
     "gatsby-remark-responsive-iframe": "^2.2.25",
     "gatsby-source-filesystem": "^2.1.35",
-    "gatsby-transformer-sharp": "^2.3.2",
+    "gatsby-transformer-sharp": "^2.3.6",
     "lodash": "^4.17.15",
     "normalize-url": "^4.5.0",
+    "react-device-detect": "^1.9.10",
     "react-headroom": "^3.0.0",
     "react-helmet": "^5.2.1",
     "react-hover-observer": "^2.1.1",
