--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node_version: [10, 11, 12]
+        node_version: [10, 12]
         os: [ubuntu-latest, macos-latest, windows-latest]
         starter: [chronoblog, chronoblog-netlify-cms, minimal]
     steps:
@@ -36,7 +36,7 @@ jobs:
       - uses: actions/checkout@master
       - uses: actions/setup-node@v1
         with:
-          node-version: "10.x"
+          node-version: "12.x"
       - name: publish:starters
         uses: johno/actions-push-subdirectories@master
         env:
