--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -5,12 +5,12 @@ on:
       - master
 jobs:
   tests:
-    timeout-minutes: 220
+    timeout-minutes: 120
     name: Test Starter ${{ matrix.starter }} on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node_version: [8, 10, 12]
+        node_version: [10, 12]
         os: [ubuntu-latest, macos-latest, windows-latest]
         starter: [chronoblog, chronoblog-netlify-cms, minimal]
     steps:
@@ -29,7 +29,7 @@ jobs:
           npm run build
 
   publish:
-    timeout-minutes: 220
+    timeout-minutes: 120
     needs: [tests]
     runs-on: ubuntu-latest
     steps:
