profile starter start

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:chronoblog": "yarn clean && yarn workspace chronoblog build",
     "build:chronoblog-netlify-cms": "yarn clean && yarn workspace chronoblog-netlify-cms build",
     "build:minimal": "yarn clean && yarn workspace minimal build",
+    "build:profile": "yarn clean && yarn workspace profile build",
     "build:tests": "yarn clean && yarn workspace tests build",
     "clean": "yarn workspaces run clean",
     "lerna": "lerna",
@@ -18,6 +19,7 @@
     "start:chronoblog": "yarn clean && yarn workspace chronoblog start",
     "start:chronoblog-netlify-cms": "yarn clean && yarn workspace chronoblog-netlify-cms start",
     "start:minimal": "yarn clean && yarn workspace minimal start",
+    "start:profile": "yarn clean && yarn workspace profile start",
     "start:tests": "yarn clean && yarn workspace tests start",
     "test": "yarn clean && jest",
     "watch": "yarn clean && jest --watch"
