--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,7 @@ name: Tests
 on: [push]
 jobs:
   tests:
-    timeout-minutes: 120
+    timeout-minutes: 220
     name: Test on node ${{ matrix.node_version }} and ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
@@ -34,3 +34,6 @@ jobs:
 
       - name: yarn build:tests
         run: yarn build:tests
+
+      - name: yarn build:profile
+        run: yarn build:profile
