--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node_version: [8, 10, 12]
+        node_version: [10, 12]
         os: [ubuntu-latest, macos-latest, windows-latest]
         starter: [chronoblog, chronoblog-netlify-cms, minimal, profile]
     steps:
