--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -1,8 +1,7 @@
 name: Test and Publish Starters
 on:
-  push:
-    branches:
-      - master
+  release:
+    types: [published]
 jobs:
   tests:
     timeout-minutes: 220
