--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -1,7 +1,7 @@
 name: Test and Publish Starters
 on:
   release:
-    types: [published]
+    types: [created, published]
 jobs:
   tests:
     timeout-minutes: 220
