--- a/.eslintrc
+++ b/.eslintrc
@@ -49,6 +49,7 @@
   ],
   "rules": {
     "@typescript-eslint/ban-ts-ignore": "off",
+    "@typescript-eslint/camelcase": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/no-empty-function": "off",
     "@typescript-eslint/no-var-requires": "off",
