--- a/package.json
+++ b/package.json
@@ -10,24 +10,34 @@
     "test-builds/*"
   ],
   "scripts": {
-    "build:chronoblog": "yarn clean && yarn workspace chronoblog build",
-    "build:chronoblog-netlify-cms": "yarn clean && yarn workspace chronoblog-netlify-cms build",
-    "build:minimal": "yarn clean && yarn workspace minimal build",
-    "build:profile": "yarn clean && yarn workspace profile build",
-    "build:hacker": "yarn clean && yarn workspace hacker build",
-    "build:content-tests": "yarn clean && yarn workspace content-tests build",
-    "build:profile-minimal": "yarn clean && yarn workspace profile-minimal build",
+    "build:chronoblog": "yarn clean:chronoblog && yarn workspace chronoblog build",
+    "build:chronoblog-disqus": "yarn clean:chronoblog-disqus && yarn workspace chronoblog-disqus build",
+    "build:chronoblog-netlify-cms": "yarn clean:chronoblog-netlify-cms && yarn workspace chronoblog-netlify-cms build",
+    "build:content-tests": "yarn clean:content-tests && yarn workspace content-tests build",
+    "build:hacker": "yarn clean:hacker && yarn workspace hacker build",
+    "build:minimal": "yarn clean:minimal && yarn workspace minimal build",
+    "build:profile": "yarn clean:profile && yarn workspace profile build",
+    "build:profile-minimal": "yarn clean:profile-minimal && yarn workspace profile-minimal build",
     "clean": "yarn workspaces run clean",
+    "clean:chronoblog": "yarn workspace chronoblog clean",
+    "clean:chronoblog-disqus": "yarn workspace chronoblog-disqus clean",
+    "clean:chronoblog-netlify-cms": "yarn workspace chronoblog-netlify-cms clean",
+    "clean:content-tests": "yarn workspace content-tests clean",
+    "clean:hacker": "yarn workspace hacker clean",
+    "clean:minimal": "yarn workspace minimal clean",
+    "clean:profile": "yarn workspace profile clean",
+    "clean:profile-minimal": "yarn workspace profile-minimal clean",
     "lerna": "lerna",
-    "serve:content-tests": "yarn clean && yarn workspace content-tests serve",
-    "serve:profile-minimal": "yarn clean && yarn workspace profile-minimal serve",
-    "start:chronoblog": "yarn clean && yarn workspace chronoblog start",
-    "start:chronoblog-netlify-cms": "yarn clean && yarn workspace chronoblog-netlify-cms start",
-    "start:minimal": "yarn clean && yarn workspace minimal start",
-    "start:profile": "yarn clean && yarn workspace profile start",
-    "start:hacker": "yarn clean && yarn workspace hacker start",
-    "start:content-tests": "yarn clean && yarn workspace content-tests start",
-    "start:profile-minimal": "yarn clean && yarn workspace profile-minimal start",
+    "serve:content-tests": "yarn clean:content-tests && yarn workspace content-tests serve",
+    "serve:profile-minimal": "yarn clean:profile-minimal && yarn workspace profile-minimal serve",
+    "start:chronoblog": "yarn clean:chronoblog && yarn workspace chronoblog start",
+    "start:chronoblog-disqus": "yarn clean:chronoblog-disqus && yarn workspace chronoblog-disqus start",
+    "start:chronoblog-netlify-cms": "yarn clean:chronoblog-netlify-cms && yarn workspace chronoblog-netlify-cms start",
+    "start:content-tests": "yarn clean:content-tests && yarn workspace content-tests start",
+    "start:hacker": "yarn clean:hacker && yarn workspace hacker start",
+    "start:minimal": "yarn clean:minimal && yarn workspace minimal start",
+    "start:profile": "yarn clean:profile && yarn workspace profile start",
+    "start:profile-minimal": "yarn clean:profile-minimal && yarn workspace profile-minimal start",
     "test": "yarn clean && jest",
     "watch": "yarn clean && jest --watch"
   },
