--- a/examples/chronoblog-disqus/package.json
+++ b/examples/chronoblog-disqus/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "gatsby": "^2.18.7",
+    "gatsby-plugin-disqus": "^1.1.4",
     "gatsby-plugin-google-analytics": "^2.1.23",
     "gatsby-plugin-manifest": "^2.2.27",
     "gatsby-plugin-sitemap": "^2.2.21",
