on release published

--- a/.github/workflows/publish-examples.yml
+++ b/.github/workflows/publish-examples.yml
@@ -1,8 +1,7 @@
 name: Publish Examples
 on:
-  push:
-    tags:
-      - "*@*"
+  release:
+    types: [published]
 jobs:
   publish:
     timeout-minutes: 220
