--- a/.github/workflows/publish-starters.yml
+++ b/.github/workflows/publish-starters.yml
@@ -1,7 +1,7 @@
 name: Publish Starters
 on:
   release:
-    types: [published]
+    types: [published, created]
 jobs:
   publish:
     timeout-minutes: 220
