change workflows settings

--- a/.github/workflows/publish-examples.yml
+++ b/.github/workflows/publish-examples.yml
@@ -1,7 +1,5 @@
 name: Publish Examples
-on:
-  release:
-    types: [published, created]
+on: [release, registry_package]
 jobs:
   publish:
     timeout-minutes: 220
