--- a/.github/workflows/publish-test-builds.yml
+++ b/.github/workflows/publish-test-builds.yml
@@ -1,7 +1,5 @@
 name: Publish test-builds
-on:
-  release:
-    types: [published, created]
+on: [release, registry_package]
 jobs:
   publish:
     timeout-minutes: 220
