new test starter - gatsby-starter-chronoblog-chinese-language-test

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "build:profile": "yarn clean:profile && yarn workspace profile build",
     "build:profile-minimal": "yarn clean:profile-minimal && yarn workspace profile-minimal build",
     "clean": "yarn workspaces run clean",
+    "clean:chinese-language-test": "yarn workspace chinese-language-test clean",
     "clean:chronoblog": "yarn workspace chronoblog clean",
     "clean:chronoblog-disqus": "yarn workspace chronoblog-disqus clean",
     "clean:chronoblog-netlify-cms": "yarn workspace chronoblog-netlify-cms clean",
@@ -30,6 +31,7 @@
     "lerna": "lerna",
     "serve:content-tests": "yarn clean:content-tests && yarn workspace content-tests serve",
     "serve:profile-minimal": "yarn clean:profile-minimal && yarn workspace profile-minimal serve",
+    "start:chinese-language-test": "yarn clean:chinese-language-test && yarn workspace chinese-language-test start",
     "start:chronoblog": "yarn clean:chronoblog && yarn workspace chronoblog start",
     "start:chronoblog-disqus": "yarn clean:chronoblog-disqus && yarn workspace chronoblog-disqus start",
     "start:chronoblog-netlify-cms": "yarn clean:chronoblog-netlify-cms && yarn workspace chronoblog-netlify-cms start",
