--- a/packages/gatsby-theme-chronoblog/package.json
+++ b/packages/gatsby-theme-chronoblog/package.json
@@ -40,10 +40,10 @@
     "@mdx-js/mdx": "^1.6.5",
     "@mdx-js/react": "^1.6.5",
     "@reach/router": "^1.3.3",
-    "@theme-ui/components": "^0.3.1",
-    "@theme-ui/match-media": "^0.3.1",
-    "@theme-ui/preset-base": "^0.3.0",
-    "@theme-ui/prism": "^0.3.0",
+    "@theme-ui/components": "0.2.50",
+    "@theme-ui/match-media": "0.2.52",
+    "@theme-ui/preset-base": "0.2.44",
+    "@theme-ui/prism": "0.2.50",
     "debug": "^4.1.1",
     "gatsby": "^2.23.3",
     "gatsby-image": "^2.4.7",
@@ -52,7 +52,7 @@
     "gatsby-plugin-page-creator": "^2.3.9",
     "gatsby-plugin-react-helmet": "^3.3.4",
     "gatsby-plugin-sharp": "^2.6.11",
-    "gatsby-plugin-theme-ui": "^0.3.0",
+    "gatsby-plugin-theme-ui": "0.2.53",
     "gatsby-remark-images": "^3.3.10",
     "gatsby-remark-responsive-iframe": "^2.4.5",
     "gatsby-source-filesystem": "^2.3.11",
@@ -64,7 +64,7 @@
     "react-hover-observer": "^2.1.1",
     "remark-slug": "^5.1.2",
     "remark-unwrap-images": "^0.2.0",
-    "theme-ui": "^0.3.1",
+    "theme-ui": "0.2.52",
     "url-join": "^4.0.1"
   },
   "devDependencies": {
