switching to npm workspaces (instead of yarn), removing some of the eslint rules, fixing dependencies - WIP

--- a/package.json
+++ b/package.json
@@ -10,38 +10,9 @@
     "test-builds/*"
   ],
   "scripts": {
-    "build:chronoblog": "yarn clean:chronoblog && yarn workspace chronoblog build",
-    "build:chronoblog-disqus": "yarn clean:chronoblog-disqus && yarn workspace chronoblog-disqus build",
-    "build:chronoblog-netlify-cms": "yarn clean:chronoblog-netlify-cms && yarn workspace chronoblog-netlify-cms build",
-    "build:content-tests": "yarn clean:content-tests && yarn workspace content-tests build",
-    "build:hacker": "yarn clean:hacker && yarn workspace hacker build",
-    "build:minimal": "yarn clean:minimal && yarn workspace minimal build",
-    "build:profile": "yarn clean:profile && yarn workspace profile build",
-    "build:profile-minimal": "yarn clean:profile-minimal && yarn workspace profile-minimal build",
-    "clean": "yarn workspaces run clean",
-    "clean:chinese-language-test": "yarn workspace chinese-language-test clean",
-    "clean:chronoblog": "yarn workspace chronoblog clean",
-    "clean:chronoblog-disqus": "yarn workspace chronoblog-disqus clean",
-    "clean:chronoblog-netlify-cms": "yarn workspace chronoblog-netlify-cms clean",
-    "clean:content-tests": "yarn workspace content-tests clean",
-    "clean:hacker": "yarn workspace hacker clean",
-    "clean:minimal": "yarn workspace minimal clean",
-    "clean:profile": "yarn workspace profile clean",
-    "clean:profile-minimal": "yarn workspace profile-minimal clean",
     "lerna": "lerna",
-    "serve:content-tests": "yarn clean:content-tests && yarn workspace content-tests serve",
-    "serve:profile-minimal": "yarn clean:profile-minimal && yarn workspace profile-minimal serve",
-    "start:chinese-language-test": "yarn clean:chinese-language-test && yarn workspace chinese-language-test start",
-    "start:chronoblog": "yarn clean:chronoblog && yarn workspace chronoblog start",
-    "start:chronoblog-disqus": "yarn clean:chronoblog-disqus && yarn workspace chronoblog-disqus start",
-    "start:chronoblog-netlify-cms": "yarn clean:chronoblog-netlify-cms && yarn workspace chronoblog-netlify-cms start",
-    "start:content-tests": "yarn clean:content-tests && yarn workspace content-tests start",
-    "start:hacker": "yarn clean:hacker && yarn workspace hacker start",
-    "start:minimal": "yarn clean:minimal && yarn workspace minimal start",
-    "start:profile": "yarn clean:profile && yarn workspace profile start",
-    "start:profile-minimal": "yarn clean:profile-minimal && yarn workspace profile-minimal start",
-    "test": "yarn clean && jest",
-    "watch": "yarn clean && jest --watch"
+    "test": "jest",
+    "watch": "jest --watch"
   },
   "husky": {
     "hooks": {
@@ -49,42 +20,37 @@
     }
   },
   "devDependencies": {
-    "@types/jest": "^24.0.18",
-    "@types/lodash": "^4.14.144",
-    "@types/node": "^12.12.14",
-    "@types/react": "^16.9.13",
-    "@types/react-dom": "^16.9.4",
-    "@types/react-helmet": "^5.0.10",
-    "@typescript-eslint/eslint-plugin": "^2.6.1",
-    "@typescript-eslint/parser": "^2.6.1",
-    "babel-jest": "^24.9.0",
-    "babel-preset-gatsby": "^0.2.20",
-    "eslint": "^6.6.0",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-html": "^6.0.0",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsdoc": "^17.1.0",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
-    "eslint-plugin-prettier": "^3.1.0",
-    "eslint-plugin-react": "^7.16.0",
-    "eslint-plugin-react-hooks": "^2.2.0",
-    "eslint-plugin-simple-import-sort": "^4.0.0",
-    "eslint-plugin-sonarjs": "^0.4.0",
-    "eslint-plugin-unicorn": "^12.1.0",
-    "husky": "^3.0.9",
-    "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
-    "lerna": "^3.18.3",
-    "lint-staged": "^9.4.2",
-    "prettier": "^1.18.2",
-    "react-test-renderer": "^16.11.0",
-    "typescript": "^3.7.2",
-    "yarn": "^1.19.1"
+    "@types/jest": "24.0.18",
+    "@types/lodash": "4.14.144",
+    "@types/node": "12.12.14",
+    "@types/react": "16.9.13",
+    "@types/react-dom": "16.9.4",
+    "@types/react-helmet": "5.0.10",
+    "@typescript-eslint/eslint-plugin": "2.6.1",
+    "@typescript-eslint/parser": "2.6.1",
+    "babel-jest": "24.9.0",
+    "babel-preset-gatsby": "0.2.20",
+    "eslint": "6.6.0",
+    "eslint-config-prettier": "6.3.0",
+    "eslint-plugin-html": "6.0.0",
+    "eslint-plugin-import": "2.18.2",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-prettier": "3.1.0",
+    "eslint-plugin-react": "7.16.0",
+    "eslint-plugin-react-hooks": "2.2.0",
+    "eslint-plugin-simple-import-sort": "4.0.0",
+    "husky": "3.0.9",
+    "identity-obj-proxy": "3.0.0",
+    "jest": "24.9.0",
+    "lerna": "3.18.3",
+    "lint-staged": "9.4.2",
+    "prettier": "1.18.2",
+    "react-test-renderer": "16.11.0",
+    "typescript": "3.7.2"
   },
   "engines": {
-    "node": ">=10.15.0",
-    "npm": "! use yarn !",
-    "yarn": ">=1.5.1"
+    "node": ">=15.0.0",
+    "npm": ">=7.0.0",
+    "yarn": "! use npm !"
   }
 }
