--- a/.eslintrc
+++ b/.eslintrc
@@ -6,13 +6,9 @@
     "node": true
   },
   "extends": [
-    "airbnb",
     "plugin:@typescript-eslint/recommended",
     "plugin:react/recommended",
-    "plugin:unicorn/recommended",
-    "plugin:sonarjs/recommended",
     "plugin:jsx-a11y/recommended",
-    "plugin:jsdoc/recommended",
     "plugin:prettier/recommended",
     "prettier/@typescript-eslint"
   ],
@@ -20,9 +16,7 @@
     {
       "files": ["*.test.js"],
       "rules": {
-        "@typescript-eslint/explicit-function-return-type": "off",
-        "sonarjs/no-duplicate-string": "off",
-        "sonarjs/prefer-single-boolean-return": "off"
+        "@typescript-eslint/explicit-function-return-type": "off"
       }
     }
   ],
@@ -38,12 +32,9 @@
   },
   "plugins": [
     "@typescript-eslint",
-    "jsdoc",
     "prettier",
-    "unicorn",
     "simple-import-sort",
     "import",
-    "sonarjs",
     "react-hooks",
     "jsx-a11y"
   ],
@@ -58,17 +49,6 @@
     "import/no-duplicates": "warn",
     "import/no-extraneous-dependencies": "warn",
     "import/order": "warn",
-    "jsdoc/check-tag-names": [
-      "warn",
-      {
-        "definedTags": ["jsx"]
-      }
-    ],
-    "jsdoc/require-jsdoc": "off",
-    "jsdoc/require-param-description": "off",
-    "jsdoc/require-returns": "off",
-    "jsdoc/require-returns-description": "off",
-    "jsdoc/valid-types": "off",
     "jsx-a11y/accessible-emoji": "warn",
     "jsx-a11y/anchor-has-content": "warn",
     "jsx-a11y/label-has-associated-control": "off",
@@ -95,13 +75,7 @@
     "react/no-children-prop": "warn",
     "react/prop-types": "off",
     "simple-import-sort/sort": "warn",
-    "sonarjs/cognitive-complexity": "warn",
-    "sonarjs/no-duplicate-string": ["warn", 7],
-    "sonarjs/no-identical-functions": "warn",
-    "sonarjs/prefer-immediate-return": "off",
-    "sort-imports": "off",
-    "unicorn/no-abusive-eslint-disable": "off",
-    "unicorn/prevent-abbreviations": "off"
+    "sort-imports": "off"
   },
   "settings": {
     "import/resolver": {
