--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        node_version: [10, 12]
+        node_version: [15]
         os: [ubuntu-latest, macos-latest, windows-latest]
     steps:
       - uses: actions/checkout@v1
@@ -17,32 +17,11 @@ jobs:
         with:
           node-version: ${{ matrix.node_version }}
 
-      - name: yarn install
-        run: yarn install
+      - name: npm i
+        run: npm i
 
-      - name: yarn test
-        run: yarn test
+      - name: npm run test
+        run: npm run test
 
-      - name: yarn build:chronoblog
-        run: yarn build:chronoblog
-
-      - name: yarn build:chronoblog-netlify-cms
-        run: yarn build:chronoblog-netlify-cms
-
-      - name: yarn build:chronoblog-disqus
-        run: yarn build:chronoblog-disqus
-
-      - name: yarn build:minimal
-        run: yarn build:minimal
-
-      - name: yarn build:content-tests
-        run: yarn build:content-tests
-
-      - name: yarn build:profile-minimal
-        run: yarn build:profile-minimal
-
-      - name: yarn build:profile
-        run: yarn build:profile
-
-      - name: yarn build:hacker
-        run: yarn build:hacker
+      - name: cd starters/chronoblog && npm run build
+        run: cd starters/chronoblog && npm run build
