--- a/lerna.json
+++ b/lerna.json
@@ -1,6 +1,6 @@
 {
   "version": "independent",
-  "npmClient": "yarn",
+  "npmClient": "npm",
   "useWorkspaces": true,
   "loglevel": "success",
   "registry": "https://registry.npmjs.org/",
